--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <a href="mcq_Hist_JHaynes_Coolidge_1B.html" class="link" target="_blank">Chapter 1B</a>
     <a href="mcq_Hist_JHaynes_Coolidge_1C.html" class="link" target="_blank">Chapter 1C</a>
     <a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1D</a>
+	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1D2</a>
+	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1E</a>
+	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1E2</a>
+	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 2A</a>
 
 
 
