--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kapetians 2026: US History - Homepage</title>
+    <title>Calvin Coolidge and the Coolidge Era - The 1920s</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 50px;
+            padding: 20px;
         }
+
         h1 {
             color: #2d87f0;
         }
+
+        h2 {
+            color: #777;
+        }
+
         .link {
-            margin: 10px;
+            display: block;
+            margin: 10px auto;
             padding: 10px 20px;
             background-color: #f0f0f0;
             border: 1px solid #ccc;
@@ -22,29 +29,26 @@
             text-decoration: none;
             color: #333;
             font-size: 18px;
+            width: 200px;
         }
+
         .link:hover {
             background-color: #ddd;
         }
     </style>
 </head>
 <body>
-    <h1> Calvin Coolidge and the Coolidge Era - the 1920s </h1>
-	<h2>(John Earl Haynes, 1998)</h2>
+    <h1>Calvin Coolidge and the Coolidge Era - The 1920s</h1>
+    <h2>(John Earl Haynes, 1998)</h2>
     <p>Click below to start a test:</p>
     <a href="mcq_intro_1.html" class="link" target="_blank">Intro 1</a>
-	<a href="mcq_intro_2.html" class="link" target="_blank">Intro 2</a>
+    <a href="mcq_intro_2.html" class="link" target="_blank">Intro 2</a>
     <a href="mcq_Hist_JHaynes_Coolidge_1B.html" class="link" target="_blank">Chapter 1B</a>
     <a href="mcq_Hist_JHaynes_Coolidge_1C.html" class="link" target="_blank">Chapter 1C</a>
     <a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1D</a>
-	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1D2</a>
-	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1E</a>
-	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1E2</a>
-	<a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 2A</a>
-
-
-
-
-
+    <a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1D2</a>
+    <a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1E</a>
+    <a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 1E2</a>
+    <a href="mcq_Hist_JHaynes_Coolidge_1D.html" class="link" target="_blank">Chapter 2A</a>
 </body>
 </html>
