--- a/traduction.html
+++ b/traduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linguistique</title>
+    <title>Traduction</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,146 +48,19 @@
     </style>
 </head>
 <body>
-    <h1>Linguistique</h1>
-    <h2>Explorez les ressources en linguistique</h2>
+    <h1>Traduction</h1>
+    <h2>Explorez les ressources en traduction/h2>
 
     <!-- General Linguistics Section -->
     <div class="category">
-        <h3>Linguistique Générale</h3>
-        <p><em>Ressources sur les bases de la linguistique, incluant phonologie, morphologie, sémantique, et autres théories.</em></p>
-        <a href="mcq_Linguitics_01.html" class="link" target="_blank">Linguistique 01</a>
-        <a href="mcq_Linguitics_02.html" class="link" target="_blank">Linguistique 02</a>
-        <a href="mcq_Linguitics_03.html" class="link" target="_blank">Linguistique 03</a>
-        <a href="mcq_Linguitics_04.html" class="link" target="_blank">Linguistique 04</a>
-        <a href="mcq_Linguitics_05.html" class="link" target="_blank">Linguistique 05</a>
-        <a href="mcq_Linguitics_06.html" class="link" target="_blank">Linguistique 06</a>
-        <a href="mcq_Linguitics_07.html" class="link" target="_blank">Linguistique 07</a>
-        <a href="mcq_Linguitics_08.html" class="link" target="_blank">Linguistique 08</a>
-        <a href="mcq_Linguitics_09.html" class="link" target="_blank">Linguistique 09</a>
-        <a href="mcq_Linguitics_10.html" class="link" target="_blank">Linguistique 10</a>
-        <a href="mcq_Linguitics_11.html" class="link" target="_blank">Linguistique 11</a>
-        <a href="mcq_Linguitics_12.html" class="link" target="_blank">Linguistique 12</a>
-        <a href="mcq_Linguitics_13.html" class="link" target="_blank">Linguistique 13</a>
-        <a href="mcq_Ling_0Intro_Theories_1.html" class="link" target="_blank">Introduction aux Théories 1</a>
-        <a href="mcq_Ling_0Intro_Theories_2.html" class="link" target="_blank">Introduction aux Théories 2</a>
+        <h3>Traduction</h3>
+        <p><em>Ressources</em></p>
+        <a href="mcq_Translation_01.html" class="link" target="_blank">Translation 01</a>
+        
     </div>
 
-    <!-- Antoine Culioli Section -->
-    <div class="category">
-        <h3>Antoine Culioli - Pour une Linguistique de l'Énonciation</h3>
-        <p><strong>Auteur</strong>: Antoine Culioli</p>
-        <p><em>Études sur les opérations énonciatives, la formalisation et les domaines notionnels.</em></p>
-        <a href="mcq_Ling_ACulioli_PLE-T1_Opérations_B.html" class="link" target="_blank">Opérations B (PLE-T1)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T1_Opérations_C.html" class="link" target="_blank">Opérations C (PLE-T1)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_A.html" class="link" target="_blank">Formalisation A (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_B.html" class="link" target="_blank">Formalisation B (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_C.html" class="link" target="_blank">Formalisation C (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_D.html" class="link" target="_blank">Formalisation D (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_E.html" class="link" target="_blank">Formalisation E (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_F.html" class="link" target="_blank">Formalisation F (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_G.html" class="link" target="_blank">Formalisation G (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_H.html" class="link" target="_blank">Formalisation H (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_I.html" class="link" target="_blank">Formalisation I (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T2_Formalisation_test.html" class="link" target="_blank">Formalisation Test (PLE-T2)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T3_DomNotionnel_1B.html" class="link" target="_blank">Domaine Notionnel 1B (PLE-T3)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T3_DomNotionnel_A.html" class="link" target="_blank">Domaine Notionnel A (PLE-T3)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T3_DomNotionnel_B2.html" class="link" target="_blank">Domaine Notionnel B2 (PLE-T3)</a>
-        <a href="mcq_Ling_ACulioli_PLE-T3_DomNotionnel_C.html" class="link" target="_blank">Domaine Notionnel C (PLE-T3)</a>
-    </div>
-
-    <!-- Phonology and Phonetics Section -->
-    <div class="category">
-        <h3>Phonologie et Phonétique</h3>
-        <p><em>Ressources sur la phonologie et la phonétique, incluant des études en anglais et autres langues.</em></p>
-        <a href="mcq_Ling_GFerre_Anglais Phono_seq1.html" class="link" target="_blank">Anglais Phono Seq 1 (GFerre)</a>
-        <a href="mcq_Ling_GFerre_Anglais Phono_seq1FR.html" class="link" target="_blank">Anglais Phono Seq 1FR (GFerre)</a>
-        <a href="mcq_Ling_GFerre_Anglais Phono_seq2.html" class="link" target="_blank">Anglais Phono Seq 2 (GFerre)</a>
-        <a href="mcq_Ling_HTEdwards_Applied_Phon_sec2-2.html" class="link" target="_blank">Applied Phonetics Sec 2-2 (HTEdwards)</a>
-        <a href="mcq_Ling_HTEdwards_Applied_Phon_sec2.html" class="link" target="_blank">Applied Phonetics Sec 2 (HTEdwards)</a>
-        <a href="mcq_Ling_HTEdwards_Applied_Phon_sec3.html" class="link" target="_blank">Applied Phonetics Sec 3 (HTEdwards)</a>
-        <a href="mcq_Ling_HTEdwards_Applied_Phon_sec4.html" class="link" target="_blank">Applied Phonetics Sec 4 (HTEdwards)</a>
-        <a href="mcq_Ling_Introductory_Phon_chap2.html" class="link" target="_blank">Introductory Phonology Chap 2</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap02.html" class="link" target="_blank">Introduction Phonology Chap 02 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap03.html" class="link" target="_blank">Introduction Phonology Chap 03 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap04.html" class="link" target="_blank">Introduction Phonology Chap 04 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap05.html" class="link" target="_blank">Introduction Phonology Chap 05 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap06.html" class="link" target="_blank">Introduction Phonology Chap 06 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap07.html" class="link" target="_blank">Introduction Phonology Chap 07 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap08.html" class="link" target="_blank">Introduction Phonology Chap 08 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap09.html" class="link" target="_blank">Introduction Phonology Chap 09 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap10.html" class="link" target="_blank">Introduction Phonology Chap 10 (LHouse)</a>
-        <a href="mcq_Ling_LHouse_Introd_Phon_chap11.html" class="link" target="_blank">Introduction Phonology Chap 11 (LHouse)</a>
-        <a href="mcq_Ling_NMandon_Phonologie-capes_1.html" class="link" target="_blank">Phonologie CAPES 1 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phonologie-capes_2.html" class="link" target="_blank">Phonologie CAPES 2 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phonologie-capes_3.html" class="link" target="_blank">Phonologie CAPES 3 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phonologie-capes_4.html" class="link" target="_blank">Phonologie CAPES 4 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phonologie-capes_5.html" class="link" target="_blank">Phonologie CAPES 5 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phonologie-capes_6.html" class="link" target="_blank">Phonologie CAPES 6 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phono_0731_1.html" class="link" target="_blank">Phonologie 0731 1 (NMandon)</a>
-        <a href="mcq_Ling_NMandon_Phono_0731_2.html" class="link" target="_blank">Phonologie 0731 2 (NMandon)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonetics_2022_L5A.html" class="link" target="_blank">Phonetics 2022 L5A (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonetics_2022_L6A.html" class="link" target="_blank">Phonetics 2022 L6A (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonetics_2022_L6B.html" class="link" target="_blank">Phonetics 2022 L6B (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonology_2022_L8A.html" class="link" target="_blank">Phonology 2022 L8A (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonology_2022_L8B.html" class="link" target="_blank">Phonology 2022 L8B (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonology_2022_L8C.html" class="link" target="_blank">Phonology 2022 L8C (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonology_2022_L8D.html" class="link" target="_blank">Phonology 2022 L8D (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Phonology_2022_L8E.html" class="link" target="_blank">Phonology 2022 L8E (NWRichards)</a>
-        <a href="mcq_Ling_PTench_Transcribing_2011_1B.html" class="link" target="_blank">Transcribing 2011 1B (PTench)</a>
-        <a href="mcq_Ling_PTench_Transcribing_2011_2.html" class="link" target="_blank">Transcribing 2011 2 (PTench)</a>
-        <a href="mcq_Ling_PTench_Transcribing_2011_3.html" class="link" target="_blank">Transcribing 2011 3 (PTench)</a>
-        <a href="mcq_Ling_PTench_Transcribing_2011_4.html" class="link" target="_blank">Transcribing 2011 4 (PTench)</a>
-    </div>
-
-    <!-- Semantics and Grammar Section -->
-    <div class="category">
-        <h3>Sémantique et Grammaire</h3>
-        <p><em>Ressources sur la sémantique, la grammaire et les structures linguistiques.</em></p>
-        <a href="mcq_Ling_HGregory_Semantics_1.html" class="link" target="_blank">Semantics 1 (HGregory)</a>
-        <a href="mcq_Ling_HLindquist_Corpus Linguistics_1.html" class="link" target="_blank">Corpus Linguistics 1 (HLindquist)</a>
-        <a href="mcq_Ling_HLindquist_Corpus Linguistics_1B.html" class="link" target="_blank">Corpus Linguistics 1B (HLindquist)</a>
-        <a href="mcq_Ling_HLindquist_Corpus Linguistics_1C.html" class="link" target="_blank">Corpus Linguistics 1C (HLindquist)</a>
-        <a href="mcq_Ling_HLindquist_Corpus Linguistics_1D.html" class="link" target="_blank">Corpus Linguistics 1D (HLindquist)</a>
-        <a href="mcq_Ling_HLindquist_Corpus Linguistics_1E.html" class="link" target="_blank">Corpus Linguistics 1E (HLindquist)</a>
-        <a href="mcq_Ling_JChuquet_Glossaire-TOE_1C.html" class="link" target="_blank">Glossaire TOE 1C (JChuquet)</a>
-        <a href="mcq_Ling_JLAustin_HowToDo_1B.html" class="link" target="_blank">How To Do 1B (JLAustin)</a>
-        <a href="mcq_Ling_JLAustin_HowToDo_2.html" class="link" target="_blank">How To Do 2 (JLAustin)</a>
-        <a href="mcq_Ling_JLAustin_HowToDo_3.html" class="link" target="_blank">How To Do 3 (JLAustin)</a>
-        <a href="mcq_Ling_SGreenbaum_Intro English Grammar_1.html" class="link" target="_blank">Intro English Grammar 1 (SGreenbaum)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_1.html" class="link" target="_blank">Have-EN 1 (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_1B.html" class="link" target="_blank">Have-EN 1B (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_1C.html" class="link" target="_blank">Have-EN 1C (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_1D.html" class="link" target="_blank">Have-EN 1D (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_2.html" class="link" target="_blank">Have-EN 2 (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_2B.html" class="link" target="_blank">Have-EN 2B (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_2C.html" class="link" target="_blank">Have-EN 2C (SOriez)</a>
-        <a href="mcq_Ling_SOriez_Have-EN_2D.html" class="link" target="_blank">Have-EN 2D (SOriez)</a>
-    </div>
-
-    <!-- Morphology and Introductory Linguistics Section -->
-    <div class="category">
-        <h3>Morphologie et Introduction à la Linguistique</h3>
-        <p><em>Ressources sur la morphologie et les introductions à la linguistique.</em></p>
-        <a href="mcq_Ling_MKracht_Intro Ling_1.html" class="link" target="_blank">Intro Linguistics 1 (MKracht)</a>
-        <a href="mcq_Ling_MKracht_Intro Ling_2.html" class="link" target="_blank">Intro Linguistics 2 (MKracht)</a>
-        <a href="mcq_Ling_MKracht_Intro Ling_3.html" class="link" target="_blank">Intro Linguistics 3 (MKracht)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Morphology_2022_L2A.html" class="link" target="_blank">Morphology 2022 L2A (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Morphology_2022_L2B.html" class="link" target="_blank">Morphology 2022 L2B (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Morphology_2022_L3A.html" class="link" target="_blank">Morphology 2022 L3A (NWRichards)</a>
-        <a href="mcq_Ling_NWRichards_MIT_Morphology_2022_L4A.html" class="link" target="_blank">Morphology 2022 L4A (NWRichards)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_1A.html" class="link" target="_blank">Intro 2022 1A (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_1B.html" class="link" target="_blank">Intro 2022 1B (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_2A.html" class="link" target="_blank">Intro 2022 2A (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_2B.html" class="link" target="_blank">Intro 2022 2B (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_3A.html" class="link" target="_blank">Intro 2022 3A (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_3B.html" class="link" target="_blank">Intro 2022 3B (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_4A.html" class="link" target="_blank">Intro 2022 4A (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_4B.html" class="link" target="_blank">Intro 2022 4B (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_5A.html" class="link" target="_blank">Intro 2022 5A (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_5B.html" class="link" target="_blank">Intro 2022 5B (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_6A.html" class="link" target="_blank">Intro 2022 6A (TrevBlock)</a>
-        <a href="mcq_Ling_TrevBlock_Intro_2022_6B.html" class="link" target="_blank">Intro 2022 6B (TrevBlock)</a>
     </div>
 
 </body>
+
 </html>
