--- a/mcq_Hist_JHaynes_Coolidge_1B.html
+++ b/mcq_Hist_JHaynes_Coolidge_1B.html
@@ -97,7 +97,7 @@
     <script>  
         const questions = [  
            {  
-                question: "Which of the following best characterizes the state of the American economy in the early 1920s, according to Amity Shlaes?",  
+                question: "Which of the following best characterizes the state of the American economy in the early 1920s?",  
                 choices: [  
                     "A period of unprecedented and universal prosperity, marked by an absence of economic anxiety.",  
                     "A period of relative prosperity marked by deep sectoral inequalities and a sense of unease about the future.",  
@@ -109,7 +109,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
            {  
-                question: "What was the primary economic challenge faced by American farmers in the early 1920s, as detailed by Shlaes?",  
+                question: "What was the primary economic challenge faced by American farmers in the early 1920s?",  
                 choices: [  
                     "Excessive government regulation hindering production and innovation.",  
                     "A lack of access to credit and financial services.",  
@@ -121,7 +121,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the significance of the Fordney-McCumber Tariff Act of 1922 in the context of Coolidge's 'Last Arcadia,' according to Shlaes?",  
+                question: "What was the significance of the Fordney-McCumber Tariff Act of 1922 in the context of Coolidge's 'Last Arcadia'?",  
                 choices: [  
                     "It provided significant relief to struggling American farmers by raising tariffs on agricultural imports.",  
                     "It exacerbated the economic problems of farmers by further restricting international trade and limiting export opportunities.",  
@@ -133,7 +133,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, what was Coolidge's general philosophy regarding government intervention in the economy?",  
+                question: "What was Coolidge's general philosophy regarding government intervention in the economy?",  
                 choices: [  
                     "He believed in active government intervention to regulate markets and promote social welfare.",  
                     "He advocated for a completely laissez-faire approach, with minimal government involvement.",  
@@ -145,7 +145,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
              {  
-                question: "What role did technological advancements play in shaping the economic landscape of the 'Last Arcadia' era, as described by Shlaes?",  
+                question: "What role did technological advancements play in shaping the economic landscape of the 'Last Arcadia' era?",  
                 choices: [  
                     "They primarily benefited urban areas, widening the gap between rural and urban prosperity.",  
                     "They had little impact on the overall economy, as their adoption was slow and uneven.",  
@@ -157,7 +157,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the political climate surrounding the issue of farm relief in the early 1920s, as depicted by Shlaes?",  
+                question: "What was the political climate surrounding the issue of farm relief in the early 1920s?",  
                 choices: [  
                     "There was a broad consensus among politicians that the government should provide direct financial assistance to farmers.",  
                     "The issue was highly divisive, with significant disagreements over the appropriate role of government and the best course of action.",  
@@ -169,7 +169,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, how did the experience of World War I shape the economic expectations and anxieties of Americans in the early 1920s?",  
+                question: "How did the experience of World War I shape the economic expectations and anxieties of Americans in the early 1920s?",  
                 choices: [  
                     "It instilled a deep sense of optimism and confidence in the American economy's ability to overcome any challenge.",  
                     "It led to widespread fears of hyperinflation and economic collapse, as had occurred in some European countries.",  
@@ -181,7 +181,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "Which of the following statements best reflects Coolidge's view on the role of government in promoting social welfare, as described by Shlaes?",  
+                question: "Which of the following statements best reflects Coolidge's view on the role of government in promoting social welfare?",  
                 choices: [  
                     "He believed that the government should provide a comprehensive safety net for all citizens, ensuring a minimum standard of living.",  
                     "He favored private charity and individual initiative over government programs, believing that they were more effective and less prone to abuse.",  
@@ -193,7 +193,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "How did the rise of consumer culture in the 1920s contribute to the sense of unease and uncertainty described by Shlaes?",  
+                question: "How did the rise of consumer culture in the 1920s contribute to the sense of unease and uncertainty?",  
                 choices: [  
                     "It fostered a sense of social solidarity and shared purpose, uniting Americans in their pursuit of material goods.",  
                     "It created a pervasive sense of anxiety and dissatisfaction, as people constantly compared themselves to others and strived for unattainable standards.",  
@@ -205,7 +205,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the prevailing attitude towards debt and credit in the early 1920s, according to Shlaes?",  
+                question: "What was the prevailing attitude towards debt and credit in the early 1920s?",  
                 choices: [  
                     "Debt was widely viewed as a dangerous and irresponsible practice to be avoided at all costs.",  
                     "Credit was increasingly seen as a convenient and acceptable way to finance consumption and improve living standards.",  
@@ -229,7 +229,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What role did Andrew Mellon, Coolidge's Secretary of the Treasury, play in shaping the economic policies of the era, according to Shlaes?",  
+                question: "What role did Andrew Mellon, Coolidge's Secretary of the Treasury, play in shaping the economic policies of the era?",  
                 choices: [  
                     "He advocated for increased government spending and social programs to alleviate poverty and reduce inequality.",  
                     "He championed tax cuts and deregulation to stimulate economic growth and promote investment.",  
@@ -241,7 +241,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, what was the impact of the Federal Reserve's monetary policy in the early 1920s?",  
+                question: "What was the impact of the Federal Reserve's monetary policy in the early 1920s?",  
                 choices: [  
                     "It successfully stabilized the economy and prevented inflation, contributing to a period of sustained growth.",  
                     "It inadvertently fueled speculation and asset bubbles, contributing to the eventual stock market crash.",  
@@ -253,7 +253,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "Which of the following best describes Coolidge's approach to foreign policy, according to Shlaes?",  
+                question: "Which of the following best describes Coolidge's approach to foreign policy?",  
                 choices: [  
                     "He advocated for aggressive interventionism to promote democracy and protect American interests around the world.",  
                     "He favored a policy of isolationism, avoiding entangling alliances and focusing on domestic affairs.",  
@@ -277,7 +277,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the role of advertising in shaping consumer behavior and economic activity during the 'Last Arcadia' era, as detailed by Shlaes?",  
+                question: "What was the role of advertising in shaping consumer behavior and economic activity during the 'Last Arcadia' era?",  
                 choices: [  
                     "Advertising played a minor role, as most consumers relied on word-of-mouth and personal recommendations.",  
                     "Advertising primarily focused on providing accurate and objective information about products.",  
@@ -289,7 +289,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, how did Coolidge's personal character and background influence his approach to the presidency and his economic policies?",  
+                question: "How did Coolidge's personal character and background influence his approach to the presidency and his economic policies?",  
                 choices: [  
                     "His aristocratic upbringing and Ivy League education instilled in him a belief in government intervention and social engineering.",  
                     "His humble origins and experience as a small-town lawyer shaped his belief in individual responsibility and limited government.",  
@@ -301,7 +301,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the impact of the automobile on American society during the 'Last Arcadia' era, as described by Shlaes?",  
+                question: "What was the impact of the automobile on American society during the 'Last Arcadia' era?",  
                 choices: [  
                     "It had little impact on rural areas, as most farmers continued to rely on horses and wagons for transportation.",  
                     "It led to the decline of cities, as people moved to the suburbs and commuted to work by car.",  
@@ -313,7 +313,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, how did the Scopes Trial reflect the cultural tensions and anxieties of the 'Last Arcadia' era?",  
+                question: "How did the Scopes Trial reflect the cultural tensions and anxieties of the 'Last Arcadia' era?",  
                 choices: [  
                     "It demonstrated the growing acceptance of modern scientific ideas and the decline of religious fundamentalism.",  
                     "It highlighted the deep divisions between urban and rural America, and between modernists and traditionalists.",  
@@ -325,7 +325,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the role of the Ku Klux Klan in the social and political landscape of the early 1920s, as described by Shlaes?",  
+                question: "What was the role of the Ku Klux Klan in the social and political landscape of the early 1920s?",  
                 choices: [  
                     "It had little influence outside of the South, as most Americans rejected its message of hate and intolerance.",  
                     "It was a powerful force in many parts of the country, promoting nativism, white supremacy, and anti-immigrant sentiment.",  
@@ -337,7 +337,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, how did the economic boom of the 1920s affect the distribution of wealth in the United States?",  
+                question: "How did the economic boom of the 1920s affect the distribution of wealth in the United States?",  
                 choices: [  
                     "It led to a more equitable distribution of wealth, as the benefits of economic growth were shared by all segments of society.",  
                     "It exacerbated existing inequalities, with the wealthy benefiting disproportionately from the economic expansion.",  
@@ -349,7 +349,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "What was the role of jazz music in challenging traditional social norms and cultural values during the 'Last Arcadia' era, as described by Shlaes?",  
+                question: "What was the role of jazz music in challenging traditional social norms and cultural values during the 'Last Arcadia' era?",  
                 choices: [  
                     "Jazz music had little impact on American society, as it was primarily confined to African American communities.",  
                     "Jazz music became a symbol of rebellion and cultural change, challenging traditional social norms and values.",  
@@ -361,7 +361,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, how did the prohibition of alcohol contribute to the social and political tensions of the 'Last Arcadia' era?",  
+                question: "How did the prohibition of alcohol contribute to the social and political tensions of the 'Last Arcadia' era?",  
                 choices: [  
                     "Prohibition successfully eliminated alcohol consumption and reduced crime rates across the country.",  
                     "Prohibition led to widespread disregard for the law, the rise of organized crime, and increased social and political corruption.",  
@@ -373,7 +373,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
              {  
-                question: "Which of the following best describes the relationship between Coolidge and the press, as depicted by Shlaes?",  
+                question: "Which of the following best describes the relationship between Coolidge and the press?",  
                 choices: [  
                     "He actively cultivated a close and friendly relationship with journalists, seeking to shape public opinion through propaganda.",  
                     "He maintained a distant and formal relationship with the press, rarely giving interviews or making public statements.",  
@@ -385,7 +385,7 @@
                 reference: "Amity Shlaes, Coolidge (New York: HarperCollins, 2013), Chapter 1."  
             },  
             {  
-                question: "According to Shlaes, how did the stock market boom of the late 1920s contribute to the sense of optimism and prosperity that characterized the 'Last Arcadia' era?",  
+                question: "How did the stock market boom of the late 1920s contribute to the sense of optimism and prosperity that characterized the 'Last Arcadia' era?",  
                 choices: [  
                     "It had little impact on the overall economy, as most Americans did not invest in the stock market.",  
                     "It created a sense of euphoria and easy wealth, leading many people to believe that prosperity would last forever.",  
@@ -510,4 +510,5 @@
     </script>  
   
 </body>  
+
 </html>  
